2003-03-26  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/synth_intr.c (synth_start_auxiliary): When an empty string
	is found on the PATH, remember to move onto the next entry
	otherwise we loop forever.
 
2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/overview.gif, doc/overview.fig: renamed to
	synth-io-overview.gif and synth-io-overview.fig.
	* doc/synth.sgml: Add some missing "&gt;"s to header file names.
	Comment out DOCTYPE for now to allow building with standard doc build.
	overview.gif renamed as per above.

2003-02-12  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.am, host/Makefile.in, configure:
	Regenerate after acinclude.m4 update

2002-12-03  Bart Veer  <bartv@ecoscentric.com>

	* src/synth_entry.c:
	Provide dummy versions of __cxa_atexit() and __dso_handle, to
	satisfy requirements of recent versions of the compiler configured
	for native Linux development.

2002-09-22  Bart Veer  <bartv@ecoscentric.com>

	* host/configure.in:
	If the installed version of Tcl is too old, issue a warning and
	suppress the build, rather than fail. Other bits of the system,
	e.g. the generic host-side tools, can still be built.
	
2002-09-21  Bart Veer  <bartv@ecoscentric.com>

	* host/ecosynth.c:
	Avoid const compatibility problems with Tcl 8.4

2002-09-15  Bart Veer  <bartv@ecoscentric.com>

	*  include/hal_io.h
	   cdl/hal_synth.cdl
	   src/synth_entry.c, src/synth_intr.c, src/synth_diag.c,
	   src/synth_protocol.h
	   doc/*
	   host/*
	   Add support for I/O via an I/O auxiliary

2002-08-04  Bart Veer  <bartv@tymora.demon.co.uk>

	* include/hal_io.h: added argv/argv/environ definitions

2002-05-23  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_synth.cdl: Don't run cache tests.

2002-04-10  Jonathan Larmour  <jlarmour@redhat.com>

	* src/synth.ld: Add RELOCS "section" and eh_frame section, plus
	correct use of .gnu.linkonce sections.

2002-02-28  Bart Veer  <bartv@redhat.com>

	* doc/synth.sgml, doc/makefile, doc/*.html: